force-app/main/default/src/objects/Loop__Insert_Update__c/Loop__Insert_Update__c.object-meta.xml
<CustomObject>
    <description>Create or update any Salesforce record when a DocGen Package is run.</description>
    <label>Insert-Update</label>
    <nameField>
        <encryptionScheme>None</encryptionScheme>
        <label>Object Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Insert-Updates</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>