force-app/main/default/src/objects/Loop__Insert_Update__c/fields/Loop__Advanced_Conditions__c.field-meta.xml
<CustomField>
    <fullName>Loop__Advanced_Conditions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Example: 1 AND (2 OR 3)</inlineHelpText>
    <label>Advanced Conditions</label>
    <length>255</length>
    <type>Text</type>
</CustomField>