force-app/main/default/src/objects/Loop__Insert_Update__c/fields/Loop__Attach__c.field-meta.xml
<CustomField>
    <fullName>Loop__Attach__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, the DocGen Package file(s) will be attached to this object (attach type based on delivery method). Checking this field will prevent the DocGen Package from being attached to the originating object unless specified in an Insert-Update.</inlineHelpText>
    <label>Attach to this Object</label>
    <type>Checkbox</type>
</CustomField>