force-app/main/default/src/objects/Loop__Insert_Update__c/fields/Loop__Conditions__c.field-meta.xml
<CustomField>
    <fullName>Loop__Conditions__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Create or Update this record only if...</inlineHelpText>
    <label>Conditions</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>