force-app/main/default/src/objects/Loop__Insert_Update__c/fields/Loop__DDP__c.field-meta.xml
<CustomField>
    <fullName>Loop__DDP__c</fullName>
    <label>DocGen Package</label>
    <referenceTo>Loop__DDP__c</referenceTo>
    <relationshipLabel>Insert-Updates</relationshipLabel>
    <relationshipName>Insert_Updates</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>