force-app/main/default/src/objects/Loop__Insert_Update__c/fields/Loop__Delivery_Methods__c.field-meta.xml
<CustomField>
    <fullName>Loop__Delivery_Methods__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Delivery Methods</label>
    <type>TextArea</type>
</CustomField>