force-app/main/default/src/objects/Loop__Insert_Update__c/fields/Loop__Field_Value_Pairs__c.field-meta.xml
<CustomField>
    <fullName>Loop__Field_Value_Pairs__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Field-Value Pairs</label>
    <length>32000</length>
    <type>LongTextArea</type>
</CustomField>