force-app/main/default/src/objects/Loop__Insert_Update__c/fields/Loop__Run_at_Beginning__c.field-meta.xml
<CustomField>
    <fullName>Loop__Run_at_Beginning__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If selected, this Insert-Update will be executed at the beginning of the DocGen Package run process.</inlineHelpText>
    <label>Run at Beginning</label>
    <type>Checkbox</type>
</CustomField>